# SportPredictifier

./: .gitignore  DISCLAIMER.md  LICENSE.md  README.md  pyproject.toml  setup.cfg
SportPredictifier/: Stadium.py  Team.py  __init__.py  __main__.py  calculate.py  load.py  main.py  matrix.py  ranking.py  report.py  simulate.py  tables.py  util.py  validation.py
SportPredictifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
SportPredictifier/objects/: Game.py  ObjectCollection.py  ScoreSettings.py  Stadium.py  Team.py  __init__.py
SportPredictifier/weighting/: spatial.py  temporal.py
scripts/: getDistanceMatrix.py
test/: schedule.csv  scoring.csv  settings.yaml  stadia.csv  teams.csv  test_load.py  test_scoring.py  test_simulate.py
test/2022MLRValidation/: run_2022_mlr_playoffs.py  schedule.csv  scoring.csv  stadia.csv  teams.csv
test/2022MLRValidation/ScoreTables/: ATL.csv  AUS.csv  DAL.csv  HOU.csv  LA.csv  NE.csv  NOLA.csv  OGDC.csv  RUNY.csv  SD.csv  SEA.csv  TOR.csv  UTAH.csv  _ManualCalculation.xlsx
test/2022MLRValidation/forecasts/: OldModel_vs_NewModel_validation.xlsx  forecasts_round_1.xlsx  forecasts_round_2.xlsx  forecasts_round_3 - Copy.xlsx  forecasts_round_3.xlsx
test/ScoreTables/: ARI.csv  ATL.csv  BUF.csv  DEN.csv  DET.csv  GB.csv  KC.csv  LAR.csv  LV.csv  MIA.csv  NO.csv  NYG.csv  SEA.csv  SF.csv  TEN.csv
test/mechanical/: schedule.csv  settings.yaml  teams.csv  update_nfl_score_table.py
test/mechanical/ScoreTables/: ARI.csv  ATL.csv  BAL.csv  CAR.csv  CHI.csv  CIN.csv  CLE.csv  DAL.csv  DET.csv  HOU.csv  IND.csv  (+9 more)
(+405 files in other folders)
