[metadata]
name = SportPredictifier
version = 3.0
description = Package for prediciting sport games based on past results
author = Joseph James Flood
author_email = joejimflood@gmail.com
url = https://github.com/JoeJimFlood/BinPrism
keywords = sport, simulation
long_description = file: README.md
license = GNU GPLv3
classifiers =
    Programming Language :: Python :: 3

[flake8]
exclude = 
    .git,
    __pycache__
    doc

[options]
zip_safe = False
include_package_data = True
package = find:
python_requires = >=3.7
packages = 
    SportPredictifier
install_requires =
    numpy
    pandas
    scipy
    matplotlib

[options.entry_points]
console_scripts =
    SportPredictifier = SportPredictifier:main